--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>Challenge: Famous font formats</title>
   <style>
-    .declaration {
+    .declaration {font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
     }
 
-    .quote {
+    .quote {font-family: cursive;
       
     }
   </style>
